--- a/template.yaml
+++ b/template.yaml
@@ -1,9 +1,9 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  sam-app
+  lambda-authorizer
 
-  Sample SAM Template for sam-app
+  Lambda authorizer for Auth0
   
 Globals:
   Function:
@@ -19,25 +19,25 @@ Parameters:
 
 
 Resources:
-  ServerlessAPI:
-    Type: AWS::Serverless::Api
-    Properties:
-      StageName: Dev
-      Auth:
-        DefaultAuthorizer: Auth0Authorizer
-        Authorizers:
-          Auth0Authorizer:
-            FunctionPayloadType: TOKEN
-            FunctionArn: !GetAtt Auth0AuthorizerFunction.Arn
-            Identity:
-              Header: Authorization
-              ValidationExpression: ^Bearer [-0-9a-zA-Z\._]*$
-              ReauthorizeEvery: 0
+#  ServerlessAPI:
+#    Type: AWS::Serverless::Api
+#    Properties:
+#      StageName: Dev
+#      Auth:
+#        DefaultAuthorizer: Auth0Authorizer
+#        Authorizers:
+#          Auth0Authorizer:
+#            FunctionPayloadType: TOKEN
+#            FunctionArn: !GetAtt Auth0AuthorizerFunction.Arn
+#            Identity:
+#              Header: Authorization
+#              ValidationExpression: ^Bearer [-0-9a-zA-Z\._]*$
+#              ReauthorizeEvery: 0
 
   Auth0AuthorizerFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: hello-world/
+      CodeUri: lambda-authorizer/
       Handler: auth.lambdaHandler
       Runtime: nodejs10.x
       Environment:
@@ -46,16 +46,16 @@ Resources:
           AUDIENCE: !Ref Audience
           TOKEN_ISSUER: !Ref TokenIssuer
 
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: hello-world/
-      Handler: app.lambdaHandler
-      Runtime: nodejs10.x
-      Events:
-        HelloWorld:
-          Type: Api
-          Properties:
-            Path: /hello
-            Method: get
-            RestApiId: !Ref ServerlessAPI
+#  HelloWorldFunction:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      CodeUri: hello-world/
+#      Handler: app.lambdaHandler
+#      Runtime: nodejs10.x
+#      Events:
+#        HelloWorld:
+#          Type: Api
+#          Properties:
+#            Path: /hello
+#            Method: get
+#            RestApiId: !Ref ServerlessAPI
